--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 <body>
 <div id="container-main">
     <section class="section-page" id="hero-section">
-<img src="./assets/mammootty-20150909105845-2447.jpg">
+<img id="profile-pic" src="./assets/mammootty-20150909105845-2447.jpg">
 <div>
+    <h1 id="user-name">FAIS EDATHIL</h1>
     <p id="bio">Self taught reactjs developer</p>
     <p id="email">faisedathil@yahoo.com</p>
 </div>
@@ -24,16 +25,21 @@
             <a href="#" target="_blank">Download Resume</a>
         </div>
     </section>
-    <section class="section-page" class="stack-section">
-        <h2>Skills</h2>
-        <ul>
-            <li>HTML</li>
-            <li>Java Script </li>
-            <li>Css</li>
-            <li>Reactjs</li>
-            <li>Mui</li>
+    <section class="section-page" >
+        <h2>Exlperience</h2>
+        <ul id="experience">
+            <li>Website for an accounting firm</li>
+            <li>Port folio website for a cheff</li>
+            <li>Personal website for a research scientist</li>
         </ul>
- 
+    </section>
+    <section class="section-page">
+        <h2>Tech Stack</h2>
+        <div id="tech-stack-wrapper">
+            <div class="card-tech-stack"><span>HTML,CSS, Java Script</span></div>
+            <div class="card-tech-stack"><span>React Js,mui</span></div>
+            <div class="card-tech-stack"><span>Git,Git Hub,Git Hub Gist</span></div>
+        </div>
     </section>
  
 </div>
