--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div>
     <h1 id="user-name">FAIS EDATHIL</h1>
     <p id="bio">Self taught front end  developer</p>
-    <p id="email">faisedathil@yahoo.com</p>
+    <p id="email"><a class="mail" href='mailto:faisedathil@yahoo.com'>faisedathil@yahoo.com</a></p>
 </div>
     </section>
     <section class="section-page" id="socials-section">
@@ -28,16 +28,16 @@
     <section class="section-page" >
         <h2>Projects</h2>
         <div class="project-card">
-            <a href="project1.html">Movie Trailer App</a>
+            <a href="movie.html">Movie Trailer App</a>
         </div>
         <div class="project-card">
             <a href="football.html">Foot Ball Highlites App</a>
         </div>
         <div class="project-card">
-            <a href="expensetracker.html">Expense Tracker</a>
+            <a href="searchengine.html">Simple Search Engine</a>
         </div>
         <div class="project-card">
-            <a href="searchengine.html">Simple Search Engine</a>
+            <a href="expensetracker.html">Expense Tracker</a>
         </div>
         
        
@@ -45,9 +45,9 @@
     <section class="section-page">
         <h2>Tech Stack</h2>
         <div id="tech-stack-wrapper">
-            <div class="card-tech-stack"><span>HTML,CSS, Java Script</span></div>
-            <div class="card-tech-stack"><span>React Js,mui</span></div>
-            <div class="card-tech-stack"><span>Git,Git Hub,Git Hub Gist</span></div>
+            <div class="card-tech-stack"><span>HTML | CSS | Java Script</span></div>
+            <div class="card-tech-stack"><span>React Js | mui | Bootsrap</span></div>
+            <div class="card-tech-stack"><span>Git | GitHub |GitHub Gist</span></div>
         </div>
     </section>
     <section id="work-history" class="section-page">
@@ -57,10 +57,10 @@
             <strong>Buisiness website</strong>
             <p>July-2022</p>
             <p>Static website for an accounting firm located in Muscat,Oman </p>
+            <a href="#" target="_blank">ASAA MUSCAT</a>
             <ul>
-                <li>Developed Using React js</li>
                 <li>Mobile Responsive</li>
-                <li>Styled Using MUI</li>
+                <li>Styled Using Bootsrap</li>
             </ul>    
         </div>
         <div class="line-break"></div>
@@ -68,6 +68,7 @@
             <strong>Personal Website</strong>
             <p>August-2022</p>
             <p>Website for a cheff</p>
+            <a href="http://aavaonline.netlify.app" target="_blank">aava online</a>
             <ul>
                 <li>React js</li>
                 <li>Mobile Responsive</li>
@@ -80,6 +81,7 @@
             <strong>Port Folio Website</strong>
             <p>September-2022</p>
             <p>Personal Portfolio Website For a Research scientist </p>
+            <a href="#">www.raheem.com</a>
             <ul>
                 <li>Mobile Responsive</li>
                 <li>HTML,CSS project</li>
