--- a/football.html
+++ b/football.html
@@ -10,12 +10,13 @@
   <body>
     <div id="container-main">
         <a href="index.html">&#x2190; Go to home page</a>
-        <h1>Search Engine</h1>
+        <h1>Football Highlites App</h1>
+        <img src="/assets//football.png" class="project-img football" alt="">
         <ul>
-            <li><a href="" target="_blank">Source Code</a></li>
-            <li><a href="" target="_blank">Live Demo</a></li>
+            <li><a href="https://github.com/E-fais/football-highlites" target="_blank">Source Code</a></li>
+            <li><a href="https://tezfootball.netlify.app/" target="_blank">Live Demo</a></li>
         </ul>
-        <p> ScoreBat Api powered Website for viewing latest football highlites and match summary using react js. mui is used  for styling and mobile responsive design.Pagination & text animations are implimented in this project.</p>
+        <p> ScoreBat Api powered Website for viewing latest football highlites and match summary using react js. MUI is used  for styling and mobile responsive design.Pagination & text animations are implimented in this project.</p>
     </div>
   </body>
 </html>
