--- a/movie.html
+++ b/movie.html
@@ -11,6 +11,7 @@
     <div id="container-main">
         <a href="index.html">&#x2190; Go to home page</a>
         <h1>Movie Trailer App</h1>
+        <img class="project-img" src="/assets/netlix.png">
         <ul>
             <li><a href="https://github.com/E-fais/netflix-clone-react-app" target="_blank">Source Code</a></li>
             <li><a href="http://fais-movies.netlify.app" target="_blank">Live Demo</a></li>
