--- a/searchengine.html
+++ b/searchengine.html
@@ -10,12 +10,13 @@
   <body>
     <div id="container-main">
         <a href="index.html">&#x2190; Go to home page</a>
-        <h1>Foot Ball App</h1>
+        <h1>Search Engine</h1>
+        <img class="project-img" src="/assets/google.png" alt="">
         <ul>
             <li><a href="https://github.com/E-fais/Google-clone-react-app" target="_blank">Source Code</a></li>
-            <li><a href="http://tez-search.netlify.app" target="_blank">Live Demo</a></li>
+            <!-- <li><a href="http://tez-search.netlify.app" target="_blank">Live Demo</a></li> -->
         </ul>
-        <p>simple search engine project.Google api from rapid api website is utilised for accomlishing this project</p>
+        <p>Simple search engine project.Google api from rapid api website is utilised for accomlishing this project.Axios library is used for fetching Api data.</p>
     </div>
   </body>
 </html>
