--- a/expensetracker.html
+++ b/expensetracker.html
@@ -11,9 +11,10 @@
     <div id="container-main">
         <a href="index.html">&#x2190; Go to home page</a>
         <h1>Expense Tracker</h1>
+        <img class="project-img" src="/assets/expense.png">
         <ul>
-            <li><a href="" target="_blank">Source Code</a></li>
-            <li><a href="" target="_blank">Live Demo</a></li>
+            <li><a href="https://github.com/E-fais/Reactjs-expense-tracker" target="_blank">Source Code</a></li>
+            <li><a href="https://e-fais.github.io/Reactjs-expense-tracker/" target="_blank">Live Demo</a></li>
         </ul>
         <p>Java Script reduce funcion is utilised for this project.Expense and income can be added. State managed by useState hook and  useContext.</p>
     </div>
