--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <img id="profile-pic" src="./assets/profile-pic.jpg">
 <div>
     <h1 id="user-name">FAIS EDATHIL</h1>
-    <p id="bio">Self taught front end  developer</p>
+    <p id="bio">Self taught front end  developer. 
+        I started coding as a hobby and then  eventually it became my passion.</p>
     <p id="email"><a class="mail" href='mailto:faisedathil@yahoo.com'>faisedathil@yahoo.com</a></p>
 </div>
     </section>
@@ -29,6 +30,9 @@
         <h2>Projects</h2>
         <div class="project-card">
             <a href="movie.html">Movie Trailer App</a>
+        </div>
+        <div class="project-card">
+            <a href="thallumala.html">Movie Review Blog</a>
         </div>
         <div class="project-card">
             <a href="football.html">Foot Ball Highlites App</a>
@@ -56,8 +60,8 @@
         <div class="work-history-card">
             <strong>Buisiness website</strong>
             <p>July-2022</p>
-            <p>Static website for an accounting firm located in Muscat,Oman </p>
-            <a href="#" target="_blank">ASAA MUSCAT</a>
+            <p>Static website for an accounting firm located in Calicut,Kerala. </p>
+            <a href="http://asaacalicut.netlify.app" target="_blank">ASAA Calicut</a>
             <ul>
                 <li>Mobile Responsive</li>
                 <li>Styled Using Bootsrap</li>
@@ -65,10 +69,10 @@
         </div>
         <div class="line-break"></div>
         <div class="work-history-card">
-            <strong>Personal Website</strong>
+            <strong><a href="http://aavaonline.netlify.app" target="_blank">Portfolio Website</a></strong>
             <p>August-2022</p>
-            <p>Website for a cheff</p>
-            <a href="http://aavaonline.netlify.app" target="_blank">aava online</a>
+            <p>Personal portfolio website for a cheff</p>
+            
             <ul>
                 <li>React js</li>
                 <li>Mobile Responsive</li>
@@ -78,16 +82,38 @@
         </div>
         <div class="line-break"></div>
         <div class="work-history-card">
-            <strong>Port Folio Website</strong>
+            <strong><a href="http://raheempk.netlify.app" target="_blank">Portfolio Website</a></strong>
             <p>September-2022</p>
             <p>Personal Portfolio Website For a Research scientist </p>
-            <a href="#">www.raheem.com</a>
             <ul>
                 <li>Mobile Responsive</li>
                 <li>HTML,CSS project</li>
-                <li> CSS Animations</li>
             </ul>    
         </div>
+    </section>
+    <section class="section-page">
+        <h2>My Articles</h2>
+        <ul>
+            <li>
+                <h3>
+                    <a target="_blank" href="https://e-fais.github.io/framer-motion-articles/">Framer Motion Tutorial</a>
+                </h3>
+            </li>
+            </ul>
+           
+            <h2>My Gists</h2>
+            <ul>
+            <li>
+                <h4>
+                    <a target="_blank" href="https://gist.github.com/E-fais/f465171f739b89433fbf57b884593250">Firebase CRUD for beginners</a>
+                </h4>
+            </li>
+            <li>
+                <h4>
+                    <a target="_blank" href="https://gist.github.com/E-fais/f2d82b1f65fb611819607f4737ea8d4f">React Pagination Using MUI</a>
+                </h4>
+            </li>
+        </ul>
     </section>
 </div>
 </body>    
