--- a/football.html
+++ b/football.html
@@ -11,7 +11,7 @@
     <div id="container-main">
         <a href="index.html">&#x2190; Go to home page</a>
         <h1>Football Highlites App</h1>
-        <img src="/assets//football.png" class="project-img football" alt="">
+        <img src="/assets/football.png" class="project-img football" alt="">
         <ul>
             <li><a href="https://github.com/E-fais/football-highlites" target="_blank">Source Code</a></li>
             <li><a href="https://tezfootball.netlify.app/" target="_blank">Live Demo</a></li>
