add mobile number

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <p id="bio">Self taught front end  developer. 
         I started coding as a hobby and then  eventually it became my passion.</p>
     <p id="email"><a class="mail" href='mailto:faisedathil@yahoo.com'>faisedathil@yahoo.com</a></p>
+    <p id="mob"><a class="mail" href='tel:+97433308708'>+974 333 08 708</a></p>
 </div>
     </section>
     <section class="section-page" id="socials-section">
